<resources>
    <string name="app_name">QuizAppHW</string>
    <string name="tv_history">History</string>
    <string name="tv_all">All</string>
    <string name="tv_date">26 january 2020 21:21</string>
    <string name="tv_difficulty">Difficulty:</string>
    <string name="tv_8_10">8/10</string>
    <string name="tv_correct_answers">Correct answers:</string>
    <string name="tv_category_mixed">Category: Mixed</string>
    <string name="tv_quiz">Quiz</string>
    <string name="tv_questions_amount">Questions amount:</string>
    <string name="tv_category">Category</string>
    <string name="tv_main_difficulty">Difficulty</string>
    <string name="btn_start">Start</string>
    <string name="tv_settings">Settings</string>
    <string name="tv_share_this_app">Share this app</string>
    <string name="tv_rate_us">Rate us</string>
    <string name="tv_leave_feedback">Leave feedback</string>
    <string name="tv_clear_history">Clear history</string>

    <string-array name="categories">
        <item>Any Category</item>
        <item>General Knowledge</item>
        <item>Entertainment: Books</item>
        <item>Entertainment: Film</item>
        <item>Entertainment: Music</item>
        <item>Entertainment: Musicals and Theatres</item>
        <item>Entertainment: Television</item>
        <item>Entertainment: Video Games</item>
        <item>Entertainment: Board Games</item>
        <item>Science and Nature</item>
        <item>Science: Computers</item>
        <item>Science: Mathematics</item>
        <item>Mythology</item>
        <item>Sports</item>
        <item>Geography</item>
        <item>History</item>
        <item>Politics</item>
        <item>Art</item>
        <item>Celebrities</item>
        <item>Animals</item>
        <item>Vehicles</item>
        <item>Entertainment: Comics</item>
        <item>Science: Gadgets</item>
        <item>Entertainment: Japanese Anime and Manga</item>
        <item>Entertainment: Cartoon and Animations</item>
    </string-array>

    <string-array name="difficulties">
        <item>Any Difficulty</item>
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
