<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView1"
        android:layout_width="@dimen/layout_width_338"
        android:layout_height="@dimen/layout_height_90"
        app:cardElevation="@dimen/cardElevation_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/marginTop_29">

        <TextView
            android:id="@+id/tvHistory_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginStart_16"
            android:layout_marginTop="@dimen/marginTop_8"
            android:fontFamily="@font/sf_ui_display_bold"
            android:text="Category:"
            android:textColor="@color/colorBlack"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvHistory_category_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="@dimen/marginTop_8"
            android:fontFamily="@font/sf_ui_display_bold"
            android:text="Mixed"
            android:textColor="@color/colorBlack"
            android:textSize="17sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imgHistory_dots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginStart_300"
            android:layout_marginTop="@dimen/marginTop_14"
            android:src="@drawable/ic_dots"/>

        <TextView
            android:id="@+id/tvHistory_answers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_correct_answers"
            android:fontFamily="@font/sf_pro_display_regular"
            android:textColor="@color/colorGrey"
            android:textSize="12sp"
            android:layout_marginTop="@dimen/marginTop_39"
            android:layout_marginStart="@dimen/marginStart_16" />

        <TextView
            android:id="@+id/tvHistory_answers_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_8_10"
            android:fontFamily="@font/sf_pro_display_regular"
            android:textColor="@color/colorGrey"
            android:textSize="12sp"
            android:layout_marginTop="@dimen/marginTop_39"
            android:layout_marginStart="112dp" />

        <TextView
            android:id="@+id/tvHistory_difficulty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_difficulty"
            android:fontFamily="@font/sf_pro_display_regular"
            android:textColor="@color/colorGrey"
            android:textSize="12sp"
            android:layout_marginTop="@dimen/marginTop_60"
            android:layout_marginStart="@dimen/marginStart_16" />

        <TextView
            android:id="@+id/tvHistory_difficulty_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_all"
            android:fontFamily="@font/sf_pro_display_regular"
            android:textSize="12sp"
            android:layout_marginTop="@dimen/marginTop_60"
            android:layout_marginStart="@dimen/marginStart_76" />

        <TextView
            android:id="@+id/tvHistory_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_date"
            android:fontFamily="@font/sf_pro_display_regular"
            android:textSize="9sp"
            android:layout_marginTop="64dp"
            android:layout_marginStart="@dimen/marginStart_230" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>