<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.history.HistoryFragment">

    <TextView
        android:id="@+id/tvHistory"
        style="@style/BigText"
        android:text="@string/tv_history"
        android:textColor="@color/colorBlack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop_32"
        android:layout_marginStart="@dimen/marginStart_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView1"
        android:layout_width="@dimen/layout_width_338"
        android:layout_height="@dimen/layout_height_90"
        app:cardElevation="@dimen/cardElevation_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/marginTop_29"
        app:layout_constraintTop_toBottomOf="@id/tvHistory">

        <TextView
            android:id="@+id/tvHistory_category1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginStart_16"
            android:layout_marginTop="@dimen/marginTop_8"
            android:fontFamily="@font/sf_ui_display_bold"
            android:text="@string/tv_category_mixed"
            android:textColor="@color/colorBlack"
            android:textSize="17sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imgTheDots1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginStart_300"
            android:layout_marginTop="@dimen/marginTop_14"
            android:src="@drawable/ic_dots"/>

        <TextView
            android:id="@+id/tvHistory_answers1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_correct_answers"
            android:fontFamily="@font/sf_pro_display_regular"
            android:textColor="@color/colorGrey"
            android:textSize="12sp"
            android:layout_marginTop="@dimen/marginTop_39"
            android:layout_marginStart="@dimen/marginStart_16" />

        <TextView
            android:id="@+id/tvHistoryAnswers1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_8_10"
            android:fontFamily="@font/sf_pro_display_regular"
            android:textColor="@color/colorGrey"
            android:textSize="12sp"
            android:layout_marginTop="@dimen/marginTop_39"
            android:layout_marginStart="112dp" />

        <TextView
            android:id="@+id/tvHistory_difficulty1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_difficulty"
            android:fontFamily="@font/sf_pro_display_regular"
            android:textColor="@color/colorGrey"
            android:textSize="12sp"
            android:layout_marginTop="@dimen/marginTop_60"
            android:layout_marginStart="@dimen/marginStart_16" />

        <TextView
            android:id="@+id/tvResultDifficulty1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_all"
            android:fontFamily="@font/sf_pro_display_regular"
            android:textSize="12sp"
            android:layout_marginTop="@dimen/marginTop_60"
            android:layout_marginStart="@dimen/marginStart_76" />

        <TextView
            android:id="@+id/tvResultDate1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_date"
            android:fontFamily="@font/sf_pro_display_regular"
            android:textSize="9sp"
            android:layout_marginTop="@dimen/marginTop_70"
            android:layout_marginStart="@dimen/marginStart_230" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="@dimen/layout_width_338"
        android:layout_height="@dimen/layout_height_90"
        app:cardElevation="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/marginTop_20"
        app:layout_constraintTop_toBottomOf="@id/cardView1">

        <TextView
            android:id="@+id/tvHistory_category2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_category_mixed"
            android:fontFamily="@font/sf_ui_display_bold"
            android:textColor="@color/colorBlack"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/marginTop_8"
            android:layout_marginStart="@dimen/marginStart_16" />

        <ImageView
            android:id="@+id/imgTheDots2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginStart_300"
            android:layout_marginTop="@dimen/marginTop_14"
            android:src="@drawable/ic_dots"/>

        <TextView
            android:id="@+id/tvHistory_answers2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_correct_answers"
            android:fontFamily="@font/sf_pro_display_regular"
            android:textColor="@color/colorGrey"
            android:textSize="12sp"
            android:layout_marginTop="@dimen/marginTop_39"
            android:layout_marginStart="@dimen/marginStart_16" />

        <TextView
            android:id="@+id/tvHistoryAnswers2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_8_10"
            android:fontFamily="@font/sf_pro_display_regular"
            android:textColor="@color/colorGrey"
            android:textSize="12sp"
            android:layout_marginTop="@dimen/marginTop_39"
            android:layout_marginStart="@dimen/marginStart_112" />

        <TextView
            android:id="@+id/tvHistory_difficulty2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_difficulty"
            android:fontFamily="@font/sf_pro_display_regular"
            android:textColor="@color/colorGrey"
            android:textSize="12sp"
            android:layout_marginTop="@dimen/marginTop_60"
            android:layout_marginStart="@dimen/marginStart_16" />

        <TextView
            android:id="@+id/tvResultDifficulty2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_all"
            android:fontFamily="@font/sf_pro_display_regular"
            android:textSize="12sp"
            android:layout_marginTop="@dimen/marginTop_60"
            android:layout_marginStart="@dimen/marginStart_76" />

        <TextView
            android:id="@+id/tvResultDate2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_date"
            android:fontFamily="@font/sf_pro_display_regular"
            android:textSize="9sp"
            android:layout_marginTop="@dimen/marginTop_70"
            android:layout_marginStart="@dimen/marginStart_230" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="@dimen/layout_width_338"
        android:layout_height="@dimen/layout_height_90"
        app:cardElevation="@dimen/cardElevation_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/marginTop_20"
        app:layout_constraintTop_toBottomOf="@id/cardView2">

        <TextView
            android:id="@+id/tvHistory_category3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_category_mixed"
            android:fontFamily="@font/sf_ui_display_bold"
            android:textColor="@color/colorBlack"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/marginTop_8"
            android:layout_marginStart="@dimen/marginStart_16" />

        <ImageView
            android:id="@+id/imgTheDots3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginStart_300"
            android:layout_marginTop="@dimen/marginTop_14"
            android:src="@drawable/ic_dots"/>

        <TextView
            android:id="@+id/tvHistory_answers3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_correct_answers"
            android:fontFamily="@font/sf_pro_display_regular"
            android:textColor="@color/colorGrey"
            android:textSize="12sp"
            android:layout_marginTop="@dimen/marginTop_39"
            android:layout_marginStart="@dimen/marginStart_16" />

        <TextView
            android:id="@+id/tvHistoryAnswers3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_8_10"
            android:fontFamily="@font/sf_pro_display_regular"
            android:textColor="@color/colorGrey"
            android:textSize="12sp"
            android:layout_marginTop="@dimen/marginTop_39"
            android:layout_marginStart="@dimen/marginStart_112" />

        <TextView
            android:id="@+id/tvHistory_difficulty3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_difficulty"
            android:fontFamily="@font/sf_pro_display_regular"
            android:textColor="@color/colorGrey"
            android:textSize="12sp"
            android:layout_marginTop="@dimen/marginTop_60"
            android:layout_marginStart="@dimen/marginStart_16" />

        <TextView
            android:id="@+id/tvResultDifficulty3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_all"
            android:fontFamily="@font/sf_pro_display_regular"
            android:textSize="12sp"
            android:layout_marginTop="@dimen/marginTop_60"
            android:layout_marginStart="@dimen/marginStart_76" />

        <TextView
            android:id="@+id/tvResultDate3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_date"
            android:fontFamily="@font/sf_pro_display_regular"
            android:textSize="9sp"
            android:layout_marginTop="@dimen/marginTop_70"
            android:layout_marginStart="@dimen/marginStart_230" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>